# klytics

./: .gitignore  .gitmodules  BUILD.gn  README.md  build.sh  klytics.dox  klytics.html
docs/: content_analysis.mmd
src/: main.cpp
src/klytics/: BUILD.gn  api.hpp  auth.hpp  constants.hpp  klytics.cpp  klytics.hpp  util.hpp
src/klytics/api/: api.cpp  api.hpp  interface.hpp  results.hpp
src/klytics/api/analysis/: html.hpp  tools.cpp  tools.hpp
src/klytics/auth/: auth.hpp
src/klytics/common/: constants.hpp  types.hpp  util.hpp
test/ut_api/: BUILD.gn  api.test.cpp  api.test.hpp
test/ut_klytics/: BUILD.gn  klytics.test.cpp  klytics.test.hpp
