all_tests = [
  "//test/ut_klytics",
  "//test/ut_api"
]

executable("klytics") {
  public_deps = [
    "//src/klytics:klytics_sources"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  libs = [
    "pthread",
    "crypto",
    "cpr",
    "curl",
  ]


  sources = [
    "//src/main.cpp",
  ]
}

group("tests") {
  testonly = true
  deps = all_tests
}
