config("inih") {
  include_dirs = [
    "//third_party/inih/cpp",
  ]
}

config("kjson") {
  include_dirs = [
    "//third_party/kjson",
    "//third_party/json/include",
  ]
}

config("knlp") {
  include_dirs = [
    "//third_party/knlp/src"
  ]
}

config("process_executor") {
  include_dirs = [
    "//third_party/process_executor"
  ]
}

config("html") {
  include_dirs = [
    "//third_party/HtmlBuilder/include"
  ]
}

config("ktube") {
  include_dirs = ["//third_party/ktube/src",
  #  "//third_party/kjson"
   ]
  # lib_dirs = [ "//src/klytics" ]
  libs = ["//third_party/ktube/out/libktube_lib.so"]
}


source_set("ini_reader") {
  sources = [
    "//third_party/inih/ini.c",
    "//third_party/inih/cpp/INIReader.cpp",
  ]
}

source_set("klytics_sources") {

  deps = [
    ":ini_reader"
  ]

  public_configs = [
    ":inih",
    ":kjson",
    ":knlp",
    ":process_executor",
    ":html",
    ":ktube"
  ]

  include_dirs = [
    "//src",
  ]

  libs = [
    "crypto",
    "cpr",
    "curl",
  ]

  sources = [
    "//src/klytics/klytics.cpp",
    # "//src/klytics/api/api.cpp",
    # "//src/klytics/api/analysis/tools.cpp"
  ]
}

