executable("ut_api") {

  public_deps = [
    "//src/klytics:klytics_sources"
  ]
  testonly = true

  libs = [
    "cpr"
  ]


  deps = [
    "//test:gtest_main",
    "//test:gtest_and_gmock"
  ]

  include_dirs = [
    "//src",
    "//third_party/json/include",
  ]

  sources = [
    "api.test.cpp",
  ]
}
